--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 # Point to the path of your applications code on your host
-APP_CODE_PATH_HOST=../
+APP_CODE_PATH_HOST=./
 
 # Point to where the `APP_CODE_PATH_HOST` should be in the container
 APP_CODE_PATH_CONTAINER=/var/www
@@ -8,7 +8,7 @@ APP_CODE_PATH_CONTAINER=/var/www
 APP_CODE_CONTAINER_FLAG=:cached
 
 # Choose storage path on your machine. For all storage systems
-DATA_PATH_HOST=~/.spacedock/data
+DATA_PATH_HOST=~/.laradock/data
 
 ### Drivers ################################################
 # All volumes driver
@@ -24,8 +24,8 @@ COMPOSE_FILE=docker-compose.yml
 # Change the separator from : to ; on Windows
 COMPOSE_PATH_SEPARATOR=:
 
-# Define the prefix of container names. This is useful if you have multiple projects that use spacedock to have separate containers per project.
-COMPOSE_PROJECT_NAME=spacedock
+# Define the prefix of container names. This is useful if you have multiple projects that use laradock to have separate containers per project.
+COMPOSE_PROJECT_NAME=laradock
 
 ### PHP Version ###########################################
 # Select a PHP version of the Workspace and PHP-FPM containers (Does not apply to HHVM).
@@ -41,8 +41,8 @@ PHP_INTERPRETER=php-fpm
 DOCKER_HOST_IP=10.0.75.1
 
 ### Remote Interpreter ####################################
-# Choose a Remote Interpreter entry matching name. Default is `spacedock`
-PHP_IDE_CONFIG=serverName=spacedock
+# Choose a Remote Interpreter entry matching name. Default is `laradock`
+PHP_IDE_CONFIG=serverName=laradock
 
 ### Windows Path ##########################################
 # A fix for Windows users, to ensure the application path works
@@ -51,6 +51,14 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 ### Docker Sync ###########################################
 # If you are using Docker Sync. For `osx` use 'native_osx', for `windows` use 'unison', for `linux` docker-sync is not required
 DOCKER_SYNC_STRATEGY=native_osx
+
+### Install Oh My ZSH! ####################################
+
+# If you want to use "Oh My ZSH!" with Laravel autocomplete plugin, set SHELL_OH_MY_ZSH to true.
+
+SHELL_OH_MY_ZSH=true
+SHELL_OH_MY_ZSH_AUTOSUGESTIONS=true
+SHELL_OH_MY_ZSH_ALIASES=true
 
 ###########################################################
 ################ Containers Customization #################
@@ -98,7 +106,6 @@ WORKSPACE_INSTALL_LARAVEL_INSTALLER=false
 WORKSPACE_INSTALL_DEPLOYER=false
 WORKSPACE_INSTALL_PRESTISSIMO=false
 WORKSPACE_INSTALL_LINUXBREW=false
-WORKSPACE_INSTALL_MC=false
 WORKSPACE_INSTALL_SYMFONY=false
 WORKSPACE_INSTALL_PYTHON=true
 WORKSPACE_INSTALL_PYTHON3=false
@@ -240,12 +247,12 @@ PHP_WORKER_PGID=1000
 
 ### NGINX #################################################
 NGINX_HOST_HTTP_PORT=80
-# NGINX_HOST_HTTPS_PORT=443
+NGINX_HOST_HTTPS_PORT=443
 NGINX_HOST_LOG_PATH=./logs/nginx/
 NGINX_SITES_PATH=./nginx/sites/
 NGINX_PHP_UPSTREAM_CONTAINER=php-fpm
 NGINX_PHP_UPSTREAM_PORT=9000
-# NGINX_SSL_PATH=./nginx/ssl/
+NGINX_SSL_PATH=./nginx/ssl/
 
 ### LARAVEL_HORIZON ################################################
 LARAVEL_HORIZON_INSTALL_BZ2=false
@@ -266,19 +273,19 @@ LARAVEL_HORIZON_PUID=1000
 
 ### APACHE ################################################
 APACHE_HOST_HTTP_PORT=80
-# APACHE_HOST_HTTPS_PORT=443
+APACHE_HOST_HTTPS_PORT=443
 APACHE_HOST_LOG_PATH=./logs/apache2
 APACHE_SITES_PATH=./apache2/sites
 APACHE_PHP_UPSTREAM_CONTAINER=php-fpm
 APACHE_PHP_UPSTREAM_PORT=9000
 APACHE_PHP_UPSTREAM_TIMEOUT=60
 APACHE_DOCUMENT_ROOT=/var/www/
-# APACHE_SSL_PATH=./apache2/ssl/
+APACHE_SSL_PATH=./apache2/ssl/
 APACHE_INSTALL_HTTP2=false
 
 ### MYSQL #################################################
 MYSQL_VERSION=latest
-MYSQL_DATABASE=database
+MYSQL_DATABASE=default
 MYSQL_USER=default
 MYSQL_PASSWORD=secret
 MYSQL_PORT=3306
@@ -293,7 +300,7 @@ MEMCACHED_HOST_PORT=11211
 
 ### MARIADB ###############################################
 MARIADB_VERSION=latest
-MARIADB_DATABASE=database
+MARIADB_DATABASE=default
 MARIADB_USER=default
 MARIADB_PASSWORD=secret
 MARIADB_PORT=3306
@@ -303,7 +310,7 @@ MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
 ### RABBITMQ ##############################################
 RABBITMQ_NODE_HOST_PORT=5672
 RABBITMQ_MANAGEMENT_HTTP_HOST_PORT=15672
-# RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT=15671
+RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT=15671
 RABBITMQ_WEB_STOMP_HOST_PORT=15674
 
 ### MEMCACHED #############################################
@@ -335,11 +342,13 @@ LARAVEL_ECHO_SERVER_PORT=6001
 
 ### TRAEFIK #################################################
 TRAEFIK_HOST_HTTP_PORT=80
-# TRAEFIK_HOST_HTTPS_PORT=443
+TRAEFIK_HOST_HTTP_ADM_PORT=8081
+TRAEFIK_HOST_HTTP_PMA_PORT=8081
+TRAEFIK_HOST_HTTPS_PORT=443
 TRAEFIK_DASHBOARD_PORT=8888
 # basic authentication for traefik dashboard username: admin password:admin
 TRAEFIK_DASHBOARD_USER=admin:$2y$10$lXaL3lj6raFic6rFqr2.lOBoCudAIhB6zyoqObNg290UFppiUzTTi
-ACME_DOMAIN=docker.localhost
+ACME_DOMAIN=example.com
 ACME_EMAIL=vladlen.beilik@gmail.com
 
 ### SWAGGER EDITOR  ###########################################
