--- a/apache2/sites/default.apache.conf
+++ b/apache2/sites/default.apache.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName spacedock.test
+  ServerName laradock.test
   DocumentRoot /var/www/
   Options Indexes FollowSymLinks
 
