--- a/laravel-horizon/supervisord.d/laravel-horizon.conf.example
+++ b/laravel-horizon/supervisord.d/laravel-horizon.conf.example
@@ -1,6 +1,6 @@
 [program:laravel-horizon]
 process_name=%(program_name)s_%(process_num)02d
-user=spacedock
+user=laradock
 command=php /var/www/artisan horizon
 autostart=true
 autorestart=true
