--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,5 +1,4 @@
 server {
-
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
 
@@ -9,7 +8,7 @@ server {
     # ssl_certificate /etc/nginx/ssl/default.crt;
     # ssl_certificate_key /etc/nginx/ssl/default.key;
 
-    server_name localhost;
+    server_name localhost.test;
     root /var/www/public;
     index index.php index.html index.htm;
 
