--- a/.env-example
+++ b/.env-example
@@ -317,8 +317,6 @@ RABBITMQ_WEB_STOMP_HOST_PORT=15674
 MEMCACHED_HOST_PORT=11211
 
 ### ADMINER ###############################################
-ADM_PORT=8081
-ADM_PLUGINS=
 ADM_DESIGN=pepa-linha
 ADM_DEFAULT_SERVER=mysql
 
@@ -342,13 +340,11 @@ LARAVEL_ECHO_SERVER_PORT=6001
 
 ### TRAEFIK #################################################
 TRAEFIK_HOST_HTTP_PORT=80
-TRAEFIK_HOST_HTTP_ADM_PORT=8081
-TRAEFIK_HOST_HTTP_PMA_PORT=8081
 TRAEFIK_HOST_HTTPS_PORT=443
 TRAEFIK_DASHBOARD_PORT=8888
 # basic authentication for traefik dashboard username: admin password:admin
 TRAEFIK_DASHBOARD_USER=admin:$2y$10$lXaL3lj6raFic6rFqr2.lOBoCudAIhB6zyoqObNg290UFppiUzTTi
-ACME_DOMAIN=example.com
+ACME_DOMAIN=docker.localhost
 ACME_EMAIL=vladlen.beilik@gmail.com
 
 ### SWAGGER EDITOR  ###########################################
