--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,8 +105,8 @@ services:
       - "${WORKSPACE_SSH_PORT}:22"
       - "${WORKSPACE_BROWSERSYNC_HOST_PORT}:3000"
       - "${WORKSPACE_BROWSERSYNC_UI_HOST_PORT}:3001"
-      - "${WORKSPACE_VUE_CLI_SERVE_HOST_PORT}:8080"
-      - "${WORKSPACE_VUE_CLI_UI_HOST_PORT}:8000"
+#      - "${WORKSPACE_VUE_CLI_SERVE_HOST_PORT}:8080"
+#      - "${WORKSPACE_VUE_CLI_UI_HOST_PORT}:8000"
     tty: true
     environment:
       - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
@@ -297,17 +297,19 @@ services:
       - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
       - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
     labels:
+      - "traefik.docker.network=traefik"
+      - "traefik.port=80"
+      - "traefik.frontend.passHostHeader=true"
       - "traefik.enable=true"
-      - "traefik.http.services.nginx.loadbalancer.server.port=80"
-      # http router
-      - "traefik.http.routers.http.rule=Host(`${ACME_DOMAIN}`, `www.${ACME_DOMAIN}`)"
-      - "traefik.http.routers.http.entrypoints=http"
-      - "traefik.http.routers.http.service=nginx"
+      - "traefik.frontend.rule=Host:${ACME_DOMAIN}"
     depends_on:
       - php-fpm
     networks:
-      - frontend
-      - backend
+      frontend:
+      backend:
+      traefik:
+        aliases:
+          - docker.localhost
 
   apache2:
     build:
@@ -425,38 +427,29 @@ services:
       - "${PMA_PORT}:80"
     depends_on:
       - "${PMA_DB_ENGINE}"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.services.nginx.loadbalancer.server.port=8081"
-      # http router
-      - "traefik.http.routers.http.rule=Host(`phpmyadmin.${ACME_DOMAIN}`, `www.phpmyadmin.${ACME_DOMAIN}`)"
-      - "traefik.http.routers.http.entrypoints=http"
-      - "traefik.http.routers.http.service=nginx"
     networks:
       - frontend
       - backend
 
   adminer:
-    build:
-      context: ./adminer
+    image: adminer
+    restart: always
     environment:
-      - ADMINER_PLUGINS=${ADM_PLUGINS}
       - ADMINER_DESIGN=${ADM_DESIGN}
       - ADMINER_DEFAULT_SERVER=${ADM_DEFAULT_SERVER}
-    ports:
-      - "${ADM_PORT}:8080"
     depends_on:
-      - php-fpm
+      - mariadb
+      - traefik
     labels:
+      - "traefik.docker.network=traefik"
+      - "traefik.port=8080"
+      - "traefik.frontend.passHostHeader=true"
       - "traefik.enable=true"
-      - "traefik.http.services.nginx.loadbalancer.server.port=8081"
-      # http router
-      - "traefik.http.routers.http.rule=Host(`adminer.${ACME_DOMAIN}`, `www.adminer.${ACME_DOMAIN}`)"
-      - "traefik.http.routers.http.entrypoints=http"
-      - "traefik.http.routers.http.service=nginx"
+      - "traefik.frontend.rule=Host:adminer.${ACME_DOMAIN}"
     networks:
       - frontend
       - backend
+      - traefik
 
   laravel-echo-server:
     build:
@@ -471,46 +464,19 @@ services:
       - frontend
       - backend
 
-  certbot:
-    build:
-      context: ./certbot
-    volumes:
-      - ./data/certbot/certs/:/var/certs
-      - ./certbot/letsencrypt/:/var/www/letsencrypt
-    environment:
-      - CN="fake.domain.com"
-      - EMAIL="fake.email@gmail.com"
-    networks:
-      - frontend
-
   traefik:
-    build:
-      context: ./traefik
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./traefik/data:/data
-    command:
-      - "--api"
-      - "--providers.docker.exposedbydefault=false"
-      - "--accesslog.filepath=/data/access.log"
-      # entrypoints
-      - "--entrypoints.http.address=:${TRAEFIK_HOST_HTTP_PORT}"
-      - "--entrypoints.traefik.address=:${TRAEFIK_DASHBOARD_PORT}"
+    image: traefik:alpine
+    command: --logLevel="ERROR" --configFile=/traefik.toml --api
+    restart: always
     ports:
-      - "${TRAEFIK_HOST_HTTP_PORT}:${TRAEFIK_HOST_HTTP_PORT}"
-      - "${TRAEFIK_HOST_HTTP_ADM_PORT}:${TRAEFIK_HOST_HTTP_ADM_PORT}"
-      - "${TRAEFIK_DASHBOARD_PORT}:${TRAEFIK_DASHBOARD_PORT}"
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+    volumes:
+      - "./traefik/traefik.toml:/traefik.toml"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
-      - frontend
-      - backend
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik.rule=Host(`${ACME_DOMAIN}`)"
-      - "traefik.http.routers.traefik.entrypoints=traefik"
-      - "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.http.routers.traefik.middlewares=access-auth"
-      - "traefik.http.middlewares.access-auth.basicauth.realm=Login Required"
-      - "traefik.http.middlewares.access-auth.basicauth.users=${TRAEFIK_DASHBOARD_USER}"
+      - traefik
 
   swagger-editor:
     build: ./swagger-editor
@@ -537,6 +503,8 @@ networks:
     driver: ${NETWORKS_DRIVER}
   backend:
     driver: ${NETWORKS_DRIVER}
+  traefik:
+    external: true
 
 volumes:
   mysql:
