APP_PROJECT added

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,6 @@
+# Project path
+APP_PROJECT=laradock
+
 # Point to the path of your applications code on your host
 APP_CODE_PATH_HOST=../
 
@@ -8,7 +11,7 @@ APP_CODE_PATH_CONTAINER=/var/www
 APP_CODE_CONTAINER_FLAG=:cached
 
 # Choose storage path on your machine. For all storage systems
-DATA_PATH_HOST=~/.laradock/data
+DATA_PATH_HOST="~/.${APP_PROJECT}/data"
 
 ### Drivers ################################################
 # All volumes driver
@@ -25,7 +28,7 @@ COMPOSE_FILE=docker-compose.yml
 COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names. This is useful if you have multiple projects that use laradock to have separate containers per project.
-COMPOSE_PROJECT_NAME=laradock
+COMPOSE_PROJECT_NAME="${APP_PROJECT}"
 
 ### PHP Version ###########################################
 # Select a PHP version of the Workspace and PHP-FPM containers (Does not apply to HHVM).
@@ -42,7 +45,7 @@ DOCKER_HOST_IP=10.0.75.1
 
 ### Remote Interpreter ####################################
 # Choose a Remote Interpreter entry matching name. Default is `laradock`
-PHP_IDE_CONFIG=serverName=laradock
+PHP_IDE_CONFIG=serverName="${APP_PROJECT}"
 
 ### Windows Path ##########################################
 # A fix for Windows users, to ensure the application path works
