--- a/.env-example
+++ b/.env-example
@@ -32,7 +32,7 @@ COMPOSE_PROJECT_NAME="${APP_PROJECT}"
 
 ### PHP Version ###########################################
 # Select a PHP version of the Workspace and PHP-FPM containers (Does not apply to HHVM).
-# Accepted values: 8.0 - 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
+# Accepted values: 8.1 - 8.0 - 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
 PHP_VERSION=7.4
 
 ### PHP Interpreter #######################################
@@ -71,7 +71,7 @@ SHELL_OH_MY_ZSH_ALIASES=true
 WORKSPACE_BASE_IMAGE_TAG_PREFIX=latest
 WORKSPACE_COMPOSER_GLOBAL_INSTALL=true
 WORKSPACE_COMPOSER_VERSION=2
-WORKSPACE_COMPOSER_AUTH=false
+WORKSPACE_COMPOSER_AUTH_JSON=false
 WORKSPACE_COMPOSER_REPO_PACKAGIST=
 WORKSPACE_NVM_NODEJS_ORG_MIRROR=
 WORKSPACE_INSTALL_NODE=true
